--- a/src/common.css
+++ b/src/common.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
 .gallery a {
@@ -39,6 +40,7 @@ img {
 
 .search-input {
   margin-right: 10px;
+  height: 25px;
 }
 
 .load-wrapper {
@@ -52,7 +54,7 @@ img {
 
 .search-btn {
   width: 110px;
-  height: 22px;
+  height: 31px;
   background-color: blue;
   color: white;
   border-radius: 3px;
